--- a/Data_Structrues/stack_and_queue.ipynb
+++ b/Data_Structrues/stack_and_queue.ipynb
@@ -251,8 +251,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e19904e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def valid(s):\n",
+    "    brakcet_mapping={\"(\":\")\",\"{\":\"}\",\"[\":\"]\"}\n",
+    "    open_bracket=set([\"(\",\"{\",\"[\"])\n",
+    "    stack=[]\n",
+    "    for i in s:\n",
+    "        if i in open_bracket:\n",
+    "            stack.append(i)\n",
+    "        elif stack and i ==brakcet_mapping[stack[-1]]:\n",
+    "            stack.pop()\n",
+    "        else:\n",
+    "            return False\n",
+    "    return stack==[]\n",
+    "s=\"{([])}\"\n",
+    "a=valid(s)\n",
+    "print(a)\n",
+    "                     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "83eec4f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## FIFO QUEUE\n",
+    "## we can do two ways \n",
+    "# 1.append and popleft\n",
+    "# 2.appendleft and popright\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "32a6493d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "109\n",
+      "False\n",
+      "3\n",
+      "99\n",
+      "7\n",
+      "109\n"
+     ]
+    }
+   ],
+   "source": [
+    "class queue:\n",
+    "    def __init__(self):\n",
+    "        self.container=deque()\n",
+    "    \n",
+    "    def push(self,val):\n",
+    "        self.container.append(val)\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        return self.container.popleft()\n",
+    "    ## Top element\n",
+    "    def peak(self):\n",
+    "        return self.container[-1]\n",
+    "    ## check whether stack is empty or not\n",
+    "\n",
+    "    def isempty(self):\n",
+    "        return len(self.container)==0\n",
+    "    \n",
+    "    ## display the size of stack\n",
+    "    def size(self):\n",
+    "        return len(self.container)\n",
+    "    \n",
+    "    def display(self):\n",
+    "        for i in self.container:\n",
+    "            print(i)\n",
+    "\n",
+    "\n",
+    "st=queue()\n",
+    "st.push(1)\n",
+    "st.push(2)\n",
+    "st.push(99)\n",
+    "st.push(7)\n",
+    "st.push(109)\n",
+    "st.pop()\n",
+    "st.pop()\n",
+    "print(st.peak())\n",
+    "print(st.isempty())\n",
+    "print(st.size())\n",
+    "st.display()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1cb348c",
    "metadata": {},
    "outputs": [],
    "source": []
